compiler/gczm.output
Gramática

    0 $accept: programa $end

    1 programa: declaracoes

    2 declaracoes: declaracoes declaracao
    3            | declaracao

    4 declaracao: decVar
    5           | decSub

    6 decVar: T_VAR listaSpecVars ":" tipo ";"

    7 tipo: T_BOOL
    8     | T_INT
    9     | T_STRING
   10     | T_STRING "[" T_NUM "]"

   11 listaSpecVars: listaSpecVars "," specVar
   12              | specVar

   13 specVar: T_ID
   14        | T_ID "=" expressao
   15        | T_ID "[" expressao "]"
   16        | T_ID "[" expressao "]" "=" "{" cnjExpr "}"

   17 cnjExpr: cnjExpr "," expressao
   18        | expressao

   19 valor: T_TRUE
   20      | T_FALSE
   21      | T_LIT_STRING
   22      | T_NUM

   23 decSub: decProc
   24       | decFun

   25 decProc: T_DEF T_ID "(" listaParametros ")" bloco
   26        | T_DEF T_ID "(" ")" bloco

   27 decFun: T_DEF T_ID "(" listaParametros ")" ":" tipo bloco
   28       | T_DEF T_ID "(" ")" ":" tipo bloco

   29 listaParametros: listaParametros ";" specParams
   30                | specParams

   31 specParams: specParamsN ":" tipo

   32 specParamsN: specParamsN "," param
   33            | param

   34 param: T_ID
   35      | T_ID "[" "]"

   36 comando: cmdSimples
   37        | bloco

   38 cmdSimples: cmdAtrib
   39           | cmdIf
   40           | cmdWhile
   41           | cmdFor
   42           | cmdStop
   43           | cmdSkip
   44           | cmdReturn
   45           | cmdChamadaProc
   46           | cmdRead
   47           | cmdWrite

   48 cmdAtrib: variavel tiposAtrib expressao ";"

   49 tiposAtrib: atribAgreg
   50           | "="

   51 atribAgreg: "/="
   52           | "%="
   53           | "*="
   54           | "+="
   55           | "-="

   56 cmdIf: T_IF "(" expressao ")" comando
   57      | T_IF "(" expressao ")" comando T_ELSE comando

   58 cmdWhile: T_WHILE "(" expressao ")" comando

   59 cmdFor: T_FOR "(" cmdAtribFor ";" expressao ";" cmdAtribFor ")" comando
   60       | T_FOR "(" error ")" comando

   61 cmdAtribFor: variavel tiposAtrib expressao

   62 cmdStop: T_STOP ";"

   63 cmdSkip: T_SKIP ";"

   64 cmdReturn: T_RETURN ";"
   65          | T_RETURN expressao ";"

   66 cmdChamadaProc: T_ID "(" ")" ";"
   67               | T_ID "(" cnjExpr ")" ";"

   68 cmdRead: T_READ variavel ";"

   69 cmdWrite: T_WRITE cnjExpr ";"

   70 bloco: blocoBegin declaracoes blocoEnd
   71      | blocoBegin comandos blocoEnd
   72      | blocoBegin declaracoes comandos blocoEnd

   73 blocoBegin: "{"

   74 blocoEnd: "}"

   75 comandos: comandos comando
   76         | comando

   77 expressao: variavel
   78          | valor
   79          | "(" expressao ")"
   80          | "-" expressao
   81          | "!" expressao
   82          | expressao "*" expressao
   83          | expressao "/" expressao
   84          | expressao "%" expressao
   85          | expressao "+" expressao
   86          | expressao "-" expressao
   87          | expressao "<" expressao
   88          | expressao "<=" expressao
   89          | expressao ">" expressao
   90          | expressao ">=" expressao
   91          | expressao "==" expressao
   92          | expressao "!=" expressao
   93          | expressao "&&" expressao
   94          | expressao "||" expressao
   95          | expressao "?" expressao ":" expressao
   96          | T_ID "(" ")"
   97          | T_ID "(" cnjExpr ")"

   98 variavel: T_ID
   99         | T_ID "[" expressao "]"


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256) 60
T_BOOL (258) 7
T_INT (259) 8
T_STRING (260) 9 10
T_IF (261) 56 57
T_ELSE (262) 57
T_FOR (263) 59 60
T_WHILE (264) 58
T_WRITE (265) 69
T_READ (266) 68
T_DEF (267) 25 26 27 28
T_RETURN (268) 64 65
T_VAR (269) 6
T_SKIP (270) 63
T_STOP (271) 62
T_TRUE (272) 19
T_FALSE (273) 20
"(" (274) 25 26 27 28 56 57 58 59 60 66 67 79 96 97
")" (275) 25 26 27 28 56 57 58 59 60 66 67 79 96 97
"[" (276) 10 15 16 35 99
"]" (277) 10 15 16 35 99
"{" (278) 16 73
"}" (279) 16 74
"," (280) 11 17 32
";" (281) 6 29 48 59 62 63 64 65 66 67 68 69
"+" (282) 85
"-" (283) 80 86
"*" (284) 82
"/" (285) 83
"%" (286) 84
"==" (287) 91
"!=" (288) 92
">" (289) 89
">=" (290) 90
"<" (291) 87
"<=" (292) 88
"||" (293) 94
"&&" (294) 93
"!" (295) 81
"=" (296) 14 16 50
"+=" (297) 54
"-=" (298) 55
"*=" (299) 53
"/=" (300) 51
"%=" (301) 52
"?" (302) 95
":" (303) 6 27 28 31 95
T_ID (304) 13 14 15 16 25 26 27 28 34 35 66 67 96 97 98 99
T_NUM (305) 10 22
T_LIT_STRING (306) 21
T_NEG_UNAR (307)
T_THEN (308)


Não terminais com as regras onde eles aparecem

$accept (54)
    à esquerda: 0
programa (55)
    à esquerda: 1, à direita: 0
declaracoes (56)
    à esquerda: 2 3, à direita: 1 2 70 72
declaracao (57)
    à esquerda: 4 5, à direita: 2 3
decVar (58)
    à esquerda: 6, à direita: 4
tipo (59)
    à esquerda: 7 8 9 10, à direita: 6 27 28 31
listaSpecVars (60)
    à esquerda: 11 12, à direita: 6 11
specVar (61)
    à esquerda: 13 14 15 16, à direita: 11 12
cnjExpr (62)
    à esquerda: 17 18, à direita: 16 17 67 69 97
valor (63)
    à esquerda: 19 20 21 22, à direita: 78
decSub (64)
    à esquerda: 23 24, à direita: 5
decProc (65)
    à esquerda: 25 26, à direita: 23
decFun (66)
    à esquerda: 27 28, à direita: 24
listaParametros (67)
    à esquerda: 29 30, à direita: 25 27 29
specParams (68)
    à esquerda: 31, à direita: 29 30
specParamsN (69)
    à esquerda: 32 33, à direita: 31 32
param (70)
    à esquerda: 34 35, à direita: 32 33
comando (71)
    à esquerda: 36 37, à direita: 56 57 58 59 60 75 76
cmdSimples (72)
    à esquerda: 38 39 40 41 42 43 44 45 46 47, à direita: 36
cmdAtrib (73)
    à esquerda: 48, à direita: 38
tiposAtrib (74)
    à esquerda: 49 50, à direita: 48 61
atribAgreg (75)
    à esquerda: 51 52 53 54 55, à direita: 49
cmdIf (76)
    à esquerda: 56 57, à direita: 39
cmdWhile (77)
    à esquerda: 58, à direita: 40
cmdFor (78)
    à esquerda: 59 60, à direita: 41
cmdAtribFor (79)
    à esquerda: 61, à direita: 59
cmdStop (80)
    à esquerda: 62, à direita: 42
cmdSkip (81)
    à esquerda: 63, à direita: 43
cmdReturn (82)
    à esquerda: 64 65, à direita: 44
cmdChamadaProc (83)
    à esquerda: 66 67, à direita: 45
cmdRead (84)
    à esquerda: 68, à direita: 46
cmdWrite (85)
    à esquerda: 69, à direita: 47
bloco (86)
    à esquerda: 70 71 72, à direita: 25 26 27 28 37
blocoBegin (87)
    à esquerda: 73, à direita: 70 71 72
blocoEnd (88)
    à esquerda: 74, à direita: 70 71 72
comandos (89)
    à esquerda: 75 76, à direita: 71 72 75
expressao (90)
    à esquerda: 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 96 97, à direita: 14 15 16 17 18 48 56 57 58 59 61 65 79
    80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 99
variavel (91)
    à esquerda: 98 99, à direita: 48 61 68 77


Estado 0

    0 $accept: . programa $end

    T_DEF  deslocar, e ir ao estado 1
    T_VAR  deslocar, e ir ao estado 2

    programa     ir ao estado 3
    declaracoes  ir ao estado 4
    declaracao   ir ao estado 5
    decVar       ir ao estado 6
    decSub       ir ao estado 7
    decProc      ir ao estado 8
    decFun       ir ao estado 9


Estado 1

   25 decProc: T_DEF . T_ID "(" listaParametros ")" bloco
   26        | T_DEF . T_ID "(" ")" bloco
   27 decFun: T_DEF . T_ID "(" listaParametros ")" ":" tipo bloco
   28       | T_DEF . T_ID "(" ")" ":" tipo bloco

    T_ID  deslocar, e ir ao estado 10


Estado 2

    6 decVar: T_VAR . listaSpecVars ":" tipo ";"

    T_ID  deslocar, e ir ao estado 11

    listaSpecVars  ir ao estado 12
    specVar        ir ao estado 13


Estado 3

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 14


Estado 4

    1 programa: declaracoes .
    2 declaracoes: declaracoes . declaracao

    T_DEF  deslocar, e ir ao estado 1
    T_VAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 1 (programa)

    declaracao  ir ao estado 15
    decVar      ir ao estado 6
    decSub      ir ao estado 7
    decProc     ir ao estado 8
    decFun      ir ao estado 9


Estado 5

    3 declaracoes: declaracao .

    $padrão  reduzir usando a regra 3 (declaracoes)


Estado 6

    4 declaracao: decVar .

    $padrão  reduzir usando a regra 4 (declaracao)


Estado 7

    5 declaracao: decSub .

    $padrão  reduzir usando a regra 5 (declaracao)


Estado 8

   23 decSub: decProc .

    $padrão  reduzir usando a regra 23 (decSub)


Estado 9

   24 decSub: decFun .

    $padrão  reduzir usando a regra 24 (decSub)


Estado 10

   25 decProc: T_DEF T_ID . "(" listaParametros ")" bloco
   26        | T_DEF T_ID . "(" ")" bloco
   27 decFun: T_DEF T_ID . "(" listaParametros ")" ":" tipo bloco
   28       | T_DEF T_ID . "(" ")" ":" tipo bloco

    "("  deslocar, e ir ao estado 16


Estado 11

   13 specVar: T_ID .
   14        | T_ID . "=" expressao
   15        | T_ID . "[" expressao "]"
   16        | T_ID . "[" expressao "]" "=" "{" cnjExpr "}"

    "["  deslocar, e ir ao estado 17
    "="  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 13 (specVar)


Estado 12

    6 decVar: T_VAR listaSpecVars . ":" tipo ";"
   11 listaSpecVars: listaSpecVars . "," specVar

    ","  deslocar, e ir ao estado 19
    ":"  deslocar, e ir ao estado 20


Estado 13

   12 listaSpecVars: specVar .

    $padrão  reduzir usando a regra 12 (listaSpecVars)


Estado 14

    0 $accept: programa $end .

    $padrão  aceitar


Estado 15

    2 declaracoes: declaracoes declaracao .

    $padrão  reduzir usando a regra 2 (declaracoes)


Estado 16

   25 decProc: T_DEF T_ID "(" . listaParametros ")" bloco
   26        | T_DEF T_ID "(" . ")" bloco
   27 decFun: T_DEF T_ID "(" . listaParametros ")" ":" tipo bloco
   28       | T_DEF T_ID "(" . ")" ":" tipo bloco

    ")"   deslocar, e ir ao estado 21
    T_ID  deslocar, e ir ao estado 22

    listaParametros  ir ao estado 23
    specParams       ir ao estado 24
    specParamsN      ir ao estado 25
    param            ir ao estado 26


Estado 17

   15 specVar: T_ID "[" . expressao "]"
   16        | T_ID "[" . expressao "]" "=" "{" cnjExpr "}"

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 29
    "-"           deslocar, e ir ao estado 30
    "!"           deslocar, e ir ao estado 31
    T_ID          deslocar, e ir ao estado 32
    T_NUM         deslocar, e ir ao estado 33
    T_LIT_STRING  deslocar, e ir ao estado 34

    valor      ir ao estado 35
    expressao  ir ao estado 36
    variavel   ir ao estado 37


Estado 18

   14 specVar: T_ID "=" . expressao

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 29
    "-"           deslocar, e ir ao estado 30
    "!"           deslocar, e ir ao estado 31
    T_ID          deslocar, e ir ao estado 32
    T_NUM         deslocar, e ir ao estado 33
    T_LIT_STRING  deslocar, e ir ao estado 34

    valor      ir ao estado 35
    expressao  ir ao estado 38
    variavel   ir ao estado 37


Estado 19

   11 listaSpecVars: listaSpecVars "," . specVar

    T_ID  deslocar, e ir ao estado 11

    specVar  ir ao estado 39


Estado 20

    6 decVar: T_VAR listaSpecVars ":" . tipo ";"

    T_BOOL    deslocar, e ir ao estado 40
    T_INT     deslocar, e ir ao estado 41
    T_STRING  deslocar, e ir ao estado 42

    tipo  ir ao estado 43


Estado 21

   26 decProc: T_DEF T_ID "(" ")" . bloco
   28 decFun: T_DEF T_ID "(" ")" . ":" tipo bloco

    "{"  deslocar, e ir ao estado 44
    ":"  deslocar, e ir ao estado 45

    bloco       ir ao estado 46
    blocoBegin  ir ao estado 47


Estado 22

   34 param: T_ID .
   35      | T_ID . "[" "]"

    "["  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 34 (param)


Estado 23

   25 decProc: T_DEF T_ID "(" listaParametros . ")" bloco
   27 decFun: T_DEF T_ID "(" listaParametros . ")" ":" tipo bloco
   29 listaParametros: listaParametros . ";" specParams

    ")"  deslocar, e ir ao estado 49
    ";"  deslocar, e ir ao estado 50


Estado 24

   30 listaParametros: specParams .

    $padrão  reduzir usando a regra 30 (listaParametros)


Estado 25

   31 specParams: specParamsN . ":" tipo
   32 specParamsN: specParamsN . "," param

    ","  deslocar, e ir ao estado 51
    ":"  deslocar, e ir ao estado 52


Estado 26

   33 specParamsN: param .

    $padrão  reduzir usando a regra 33 (specParamsN)


Estado 27

   19 valor: T_TRUE .

    $padrão  reduzir usando a regra 19 (valor)


Estado 28

   20 valor: T_FALSE .

    $padrão  reduzir usando a regra 20 (valor)


Estado 29

   79 expressao: "(" . expressao ")"

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 29
    "-"           deslocar, e ir ao estado 30
    "!"           deslocar, e ir ao estado 31
    T_ID          deslocar, e ir ao estado 32
    T_NUM         deslocar, e ir ao estado 33
    T_LIT_STRING  deslocar, e ir ao estado 34

    valor      ir ao estado 35
    expressao  ir ao estado 53
    variavel   ir ao estado 37


Estado 30

   80 expressao: "-" . expressao

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 29
    "-"           deslocar, e ir ao estado 30
    "!"           deslocar, e ir ao estado 31
    T_ID          deslocar, e ir ao estado 32
    T_NUM         deslocar, e ir ao estado 33
    T_LIT_STRING  deslocar, e ir ao estado 34

    valor      ir ao estado 35
    expressao  ir ao estado 54
    variavel   ir ao estado 37


Estado 31

   81 expressao: "!" . expressao

    T_TRUE        deslocar, e ir ao estado 27
    T_FALSE       deslocar, e ir ao estado 28
    "("           deslocar, e ir ao estado 29
    "-"           deslocar, e ir ao estado 30
    "!"           deslocar, e ir ao estado 31
    T_ID          deslocar, e ir ao estado 32
    T_NUM         deslocar, e ir ao estado 33
    T_LIT_STRING  deslocar, e ir ao estado 34

    valor      ir ao estado 35
    expressao  ir ao estado 55
    variavel   ir ao estado 37


Estado 32

   96 expressao: T_ID . "(" ")"
   97          | T_ID . "(" cnjExpr ")"
   98 variavel: T_ID .
   99         | T_ID . "[" expressao "]"

    "("  deslocar, e ir ao estado 56
    "["  deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 98 (variavel)


Estado 33

   22 valor: T_NUM .

    $padrão  reduzir usando a regra 22 (valor)


Estado 34

   21 valor: T_LIT_STRING .

    $padrão  reduzir usando a regra 21 (valor)


Estado 35

   78 expressao: valor .

    $padrão  reduzir usando a regra 78 (expressao)


Estado 36
